2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: append to errbuf when a read error occurs on
	  errfd - the message was created but never used

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: ensure NETWORK_BLOCK_BYTES are available to
	  read replies

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: factorize reply buffer offset handling, it is
	  the same for n >= 0

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: handle reply buffer extension in only one place

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/file.c: GLib: rewrite sanitise_filename() as a simple
	  wrapper over g_strdelimit()

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (51): GLib: change vstralloc(...) for g_strjoin(NULL, ...)
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  vstralloc()
	* server-src/driverio.c: add one missing NULL to the list of arguments
	  along the way

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (31): GLib: change vstrallocf() for g_strdup_printf();
	  change to a simple g_strup() when possible
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  vstrallocf()

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (54): GLib: change alloc() for g_malloc()
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  alloc()

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (79): GLib: change stralloc() for g_strdup()
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  stralloc()

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix gnutar pattern matching for gtar 1.25.

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: s/NDMP4_/NDMP9_/g

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>